--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,12 @@
 # Gradle Properties
 org.gradle.jvmargs = -Xmx1G
 org.gradle.parallel = true
+kotlin.incremental=true
+kotlin.code.style=official
 
 # Mod Properties
-version = 1.0.0
-maven_group = io.github.actuallylost
+version = 0.1.0
+group = io.github.actuallylost
 archives_base_name = skillsmod
 
 # Dependencies are managed at gradle/libs.versions.toml
